# AI-Self-Learnings

./: .gitignore  img_gen.py  requirements-full.txt  requirements.txt  sapera.py
0. Basics/: 01_basic_llm.py  02_gemini_llm.py  03_resume_chatbot.py  03_tokens_count.py
10. Vector DBs/: 1_chroma.py  documents.py
11. Retrievers/: langchain_retrievers.ipynb
12. RAG/: document.txt  document_rag_openrouter.py  final_yt.py  yt_chatbot.py
13. Tools/: 1_duck_duck_go.py  3.1_structured_custom_tool.py  3.2_base_tool_custom.py  3_custom_tool_basics.py  3_custom_tool_demo.py  4_toolkit.py
14. Tool Calling/: 1_tool_binding.py  2_campusx.py  2_curreny_convert.py
15. Agent/: 1_simple_agent.py  2_tavily.py
16. Langgraph Sequential/: 1_bmi_calculator.py  2_llm_workflow.py
17. Parallel Workflow/: 1_batsman.py  2_upsc_essay.py
18. Conditional Workflow/: 1_quadratic_equation.py  2_review_response.py
19. Iterative Workflow/: iterative_workflow.py
2. Chatmodels/: 3_gemini.py  4_huggingface_api.py  4_huggingface_local.py  5_text_audio.py  6_test_local.py  7_openrouter.py
20. Some Projects/: The_Business_Case_for_Renewable_Energy_modern_green_clean_minimal.pptx  alexa.py  (+4 more)
MCP_THE_BEAST/: 1_local_expense.py  2_remote_simple.py  3_remote_expense.py  4_remote_expense_async.py  5_mcp_client_chatbot.py  5_mcp_client_chatbot_local.py  6_mcp_client_chatbot.py  7_test_mcp_server.py  8_test_mcp_client.py  categories.json  expenses.db  main.py  pyproject.toml  requirements.txt
mcps_new_course/: 1_filesystem.py  1_filesystem_mcp_client.py  filesystem.py  pyproject.toml
(+84 files in other folders)
