[project]
name = "mcp-the-beast"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=25.1.0",
    "aiosqlite>=0.22.1",
    "fastmcp>=2.14.2",
    "langchain>=1.2.3",
    "langchain-groq>=1.1.1",
    "langchain-mcp-adapters>=0.2.1",
    "python-dotenv>=1.2.1",
    "streamlit>=1.52.2",
]
