[project]
name = "mcps-new-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.14.3",
    "langchain-google-genai>=4.2.0",
    "langchain-groq>=1.1.1",
    "langchain-mcp-adapters>=0.2.1",
    "mcp[cli]>=1.25.0",
    "nest-asyncio>=1.6.0",
]
